Bug 929009 - Support mono configurations in WASAPI backend.  r=padenot